# mergerApp

./: CMakeLists.txt
src/: main.cpp
src/core/: MergeService.cpp  MergeService.h
src/ui/: MainWindow.cpp  MainWindow.h
